NIFI-16253 Added deterministic order for Connector Property dependencies